# konoha-jit-deprecated

./: .cproject  .gitignore  CMakeLists.txt  ChangeLog  ChangeLog-0.5  Makefile  Makefile.am  Makefile.in  README  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  konoha.1  konoha.pc  konoha.pc.in  konoha.spec  ktest.sh  libtool
.pygen/: gen_class.py  gen_konoha.py  gen_konohac.py  gen_message.py  gen_vm.py  genkonoha.py  memo.txt  message.txt  pygenlib.py  pygenlib2.py  source.py  test.txt
BUGS/: array_multiline.ktest  case_string.k  class_declare.k  class_definition_with_method.ktest  class_domain.ktest  class_float_set.ktest  comment.k  float_compare_with_zero.ktest  float_mapper.ktest  float_substitution.ktest  int_bit_operate.ktest  multiline_comment.k  string_escape.ktest  string_indexof.ktest  string_multi_split.ktest  string_multi_trim.ktest  string_triplequote_single.ktest  test2.k  triplequote.k  try_catch_Exception.ktest  try_catch_undefinedvariable.ktest
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
bench/: aobench.k  dhrystone.k  fibo.k  jittest.k  microbench.k  microbench.lua  microbench.py  microbench.rb  microbench2.js  microbench2.k  microbench2.lua  microbench2.p2  microbench2.pl  microbench2.py  microbench2.rb  microbench3.cpp  microbench3.java  microbench3.js  microbench3.k  microbench3.lua  microbench3.pl  microbench3.py  microbench3.rb  nbody.k  stringbench.k
gensrc/: gen_automake.k  gen_make.k  gen_nmake.k  gen_pkgmake.k  gen_test.k  walk.k
gentools/: array.k  gen_automake.k  gen_ctt.k  gen_gamma.py  gen_make.k  gen_nmake.k  gen_test.k  gen_tmake.k  gen_vm.py  gen_vmdoc.k  gencoverage.sh  genkonoha.py  genpopcode.k  pygenlib2.py  regcheck.c
include/: konoha.h  konoha1.h
konoha.xcodeproj/: project.pbxproj
ktest/: sample.ktest  todo.ktest
llvm_test/: aobench.k  arg.k  args.k  array.k  array_set.k  arrayadd.k  binarytrees.k  bool_and_or.k  bool_neg.k  boolop.k  cast.k  class.k  classdef.k  dowhile.k  fact.k  fadd.k  fib.k  field.k  floatop.k  foreach.k  fornest.k  fornest2.k  global.k  if.k  if2.k  intop.k  let.k  main.k  math.k  member.k  new.k  null.k  opr3.k  out.k  print.k  (+7 more)
(+325 files in other folders)
